Sync stack policies 2 (#27462)
* redirect policy.

* logging policy.

* token policy part 1 - the policy.

* open telemetry.

* who are you ?!

* who are you ?!

* does this help ?

* Revert "who are you ?!"

This reverts commit 77fb47ca4f018653d0b915c750fefc7ad1423a0e.

* Revert "who are you ?!"

This reverts commit e971f1981d3c89c32d669d1b703d95ee30537cef.

* some of pr feedback.

* checkstyle.

* todo that.