@@ -17,6 +17,7 @@
     <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
     <javaModulesSurefireArgLine>
       --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED<!-- Powermock seems to be messing up modules, i.e. NettyAsyncHttpClient for some reason ends up in unnamed module in runtime  -->
     </javaModulesSurefireArgLine>
   </properties>
 
